[package]
name = "example-server"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.86"
axum = "0.8.1"
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
